<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="53dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_return_24"
        android:contentDescription="@string/Back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/supplierUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <EditText
            android:id="@+id/supplierName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/supplier_name"
            android:inputType="text"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplierId" />

        <EditText
            android:id="@+id/supplierId"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/supplier_Id"
            android:focusable="false"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/supplierName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplierName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/emailValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email" />

        <TextView
            android:id="@+id/phoneNumberValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/supplierNameValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/supplierName"
            app:layout_constraintStart_toStartOf="@+id/supplierName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/supplierUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>