<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="53dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_return_24"
        android:contentDescription="@string/Back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/productUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/productNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/product_number"
            android:inputType="textVisiblePassword|textCapCharacters"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/productName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productId"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/productId"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:hint="@string/product_id"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/productNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="text"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/supplierId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productNumber" />

        <EditText
            android:id="@+id/purchasePrice"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/stock_price"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/salePrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplierName" />

        <EditText
            android:id="@+id/stockLow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/stock_low"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salePrice"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/salePrice"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/sale_price"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/stockLow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchasePrice"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/supplierName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:hint="@string/supplier_name"
            android:inputType="text"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/purchasePrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplierId"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/supplierId"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/supplier_Id"
            android:inputType="number"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/supplierName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productName"
            tools:ignore="TextContrastCheck,TextFields" />

        <TextView
            android:id="@+id/productNumberValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/productNumber"
            app:layout_constraintStart_toStartOf="@+id/productNumber" />

        <TextView
            android:id="@+id/stockLowValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/stockLow"
            app:layout_constraintStart_toStartOf="@+id/stockLow" />

        <TextView
            android:id="@+id/supplierIdValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/supplierId"
            app:layout_constraintStart_toStartOf="@+id/stockLow" />

        <TextView
            android:id="@+id/supplierNameValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/supplierName"
            app:layout_constraintStart_toStartOf="@+id/supplierName" />

        <TextView
            android:id="@+id/salePriceValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/salePrice"
            app:layout_constraintStart_toStartOf="@+id/salePrice" />

        <TextView
            android:id="@+id/purchasePriceValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/purchasePrice"
            app:layout_constraintStart_toStartOf="@+id/purchasePrice" />

        <TextView
            android:id="@+id/productNameValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintBottom_toTopOf="@+id/productName"
            app:layout_constraintStart_toStartOf="@+id/productName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/productUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>